--- a/styles/style.css
+++ b/styles/style.css
@@ -207,3 +207,39 @@ a{
     text-align: left;
 }
 /* online game end */
+
+/* hero section start */
+
+.hero-section{
+    max-width: var(--container-width);
+    margin: var(--container-margin);
+    margin-bottom: 70px;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 50px;
+}
+.hero-content{
+    width: 40%;
+}
+.hero-content p{
+   padding-top: 24px;
+}
+.hero-img{
+    width: 50%;
+    position: relative;
+}
+.hero-img > img{
+    width: 100%;
+}
+.hero-img .inner-img{
+    position: absolute;
+    top: 60%;
+    left: -20%;
+}
+.inner-img img{
+    width: 250px;
+}
+
+/* hero section end */
