--- a/styles/style.css
+++ b/styles/style.css
@@ -243,3 +243,44 @@ a{
 }
 
 /* hero section end */
+
+/* game link section start */
+
+.games-btn-link-section{
+    background: linear-gradient(90deg, rgba(255, 66, 165, 0.03) 0%, rgba(255, 66, 165, 0.03) 100%);
+    margin-top: 120px;
+}
+.btn-link-container{
+    padding:100px 0px;
+    max-width: 1120px;
+    margin:var(--container-margin);
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 20px;
+}
+.btn-game-link{
+    border-radius: 50px;
+    background: #FFF;
+    padding: 10px 10px;
+    padding-right: 20px;
+    border: none;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 200px;
+}
+.btn-game-link p{
+    color: #0B0223;
+    font-size: 14px;
+    font-weight: 600;
+}
+.btn-game-link:hover{
+    border-radius: 50px;
+    border: 2px solid #FF42A5;
+    cursor: pointer;
+}
+.btn-game-link:hover p{
+    color: #FF42A5;
+}
+/* game link section start */
