single bonus part added

--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -58,6 +58,9 @@
     .video-box .video-caption{
         text-align: center;
     }
+    .video-box:hover .overlay-watch-icon{
+        height: 80%;
+    }
     /* online games end */
 
     /* hero section start */
@@ -91,7 +94,23 @@
    .social-icon img{
         margin: 10px;
     }
+    .terms-and-condition-menu li a,.footer-container p{
+        margin-top: 0px;
+    }
     /* end footer section */
+    /* bonus section start*/
+    .we-are-gamer-container{
+        flex-direction: column-reverse;
+        padding: 50px 30px;
+    }
+    .we-are-gamer-content{
+        width: 100%;
+        text-align: center;
+    }
+    .we-are-gamer-img{
+        width: 100%;
+    }
+    /* bonus section end*/
 }
 
 
