some change in responsive

--- a/styles/style.css
+++ b/styles/style.css
@@ -350,6 +350,7 @@ a{
     align-items: center;
     justify-content: space-between;
     width: 200px;
+    transition: border 1s;
 }
 .btn-game-link p{
     color: #0B0223;
